--- a/stlyes/styles.css
+++ b/stlyes/styles.css
@@ -1,5 +1,10 @@
-* {
+@import "";
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 head {
@@ -9,34 +14,78 @@ body,
 html {
   height: 100%;
   margin: 0;
-}
-
-footer {
-}
-
-main {
+  font-family: system-ui;
 }
 
 header {
+  width: 100%;
+  height: 150px;
+  color: antiquewhite;
+  background-color: #888888;
+  border-radius: 8px;
+  box-shadow: 3px black;
+}
+
+main {
+  height: 100%;
+}
+
+footer {
+  width: 100%;
+  min-height: 150px;
+  color: antiquewhite;
+  background-color: #888888;
+  border-radius: 8px;
+  box-shadow: 3px black;
 }
 
 /* --- SECTIONS -- */
 
-.bg {
-  background-image: url("background-img.jpg");
-  filter: blur(8px);
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
 .header-title {
 }
 
-.navigation {
+.main__nav {
+  padding: 25px;
 }
 
-.navigation-content {
+.navigation {
+  display: flex;
+  flex-flow: row wrap;
+  min-height: 950px;
+  background-color: ##f5f5f5;
+  gap: 50px;
+}
+
+.navigation__haiku {
+  align-items: center;
+  width: 30%;
+  font-size: 1.5rem;
+  box-shadow: 0px 0px 10px 0px #c5c5c5;
+  border: 1px solid black;
+  border-radius: 4px;
+  background-image: url("../assets/ian-valerio-W6kVeqv2N3o-unsplash.jpg");
+  background-size: cover;
+}
+
+.navigation__werke {
+  align-items: center;
+  width: 30%;
+  font-size: 1.5rem;
+  box-shadow: 0px 0px 10px 0px #c5c5c5;
+  border: 1px solid black;
+  border-radius: 4px;
+  background-image: url("../assets/The_Great_Wave_off_Kanagawa.jpg");
+  background-size: cover;
+}
+
+.navigation__aboutme {
+  align-items: center;
+  width: 30%;
+  font-size: 1.5rem;
+  box-shadow: 0px 0px 10px 0px #c5c5c5;
+  border: 1px solid black;
+  text-align: center;
+  border-radius: 4px;
+  background-image: url("../assets/masaaki-komori-qwPSnBvdhtI-unsplash.jpg");
+  background-size: cover;
 }
